<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StandardActivity">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/outline_home_white_18dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/outline_shopping_cart_white_18dp"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/baseline_help_outline_white_18dp"
        android:title="@string/help"
        app:showAsAction="ifRoom" />


</menu>